# xrealAirLinuxDriver

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml
examples/: CMakeLists.txt
examples/debug_cam/: CMakeLists.txt
examples/debug_cam/src/: camera.cpp
examples/debug_d3/: CMakeLists.txt
examples/debug_d3/src/: debug.c
examples/debug_d4/: CMakeLists.txt
examples/debug_d4/src/: debug.c
examples/debug_imu/: CMakeLists.txt
examples/debug_imu/src/: debug.c
examples/debug_mcu/: CMakeLists.txt
examples/debug_mcu/src/: debug.c
examples/mcu_firmware/: CMakeLists.txt
examples/mcu_firmware/src/: upgrade.c
interface_lib/: CMakeLists.txt
interface_lib/include/: device.h  device3.h  device4.h  device_imu.h  device_mcu.h  endian_compat.h  hid_ids.h
interface_lib/src/: crc32.c  device.c  device3.c  device4.c  device_imu.c  device_mcu.c  hid_ids.c
src/: driver.c
udev/: nreal_air.rules
